--- a/cv.html
+++ b/cv.html
@@ -156,16 +156,20 @@
                                     </div>
                                     <div class="yui-u">
                                         <p>
-                                            (Merit) ND Goldsworthy Scholarship (2022)
+                                            <span style="font-size:18px">
+                                                <b>(Merit) ND Goldsworthy Scholarship (2022)</b>
+                                            </span><br>
                                             <span style="font-size:16px">
                                                 University of Melbourne (UniMelb), Australia
-                                            </span><br />
+                                            </span><br>
                                             <span style="font-size:14px">
                                                 <a href="https://scholarships.unimelb.edu.au/awards/n-d-goldsworthy-scholarship-for-physics">Details of the award here</a> 
-                                            </span><br />
+                                            </span><br>
                                         </p>
                                         <p>
-                                            (Merit) UniPd Scholarship "Mille e una lode" (2019)
+                                            <span style="font-size:18px">
+                                                <b>(Merit) UniPd Scholarship "Mille e una lode" (2019)</b>
+                                            </span><br>
                                             <span style="font-size:16px">
                                                 University of Padua (UniPd), Italy
                                             </span><br />
@@ -178,20 +182,24 @@
                                     </div>
                                     <div class="yui-u">
                                         <p>
-                                            Lab Coordinator (2024 - present).
+                                            <span style="font-size:18px">
+                                                <b>Lab Coordinator (2024 - present)</b>
+                                            </span><br>
                                             <span style="font-size:16px">
-                                                "From the Solar System to the Cosmos", University of Melbourne (UniMelb), Australia
-                                            </span><br />
+                                                </b>University of Melbourne (UniMelb), Australia
+                                            </span><br>
                                             <span style="font-size:14px">
-                                                First year Physics Undergraduate Program: Assisting with the preparation of course materials, maintaining and updating the LMS 
+                                                First year Physics Undergraduate Program "From the Solar System to the Cosmos": Assisting with the preparation of course materials, maintaining and updating the LMS 
                                                 and teaching small classes while facilitating a team of demonstrators and markers. 
-                                            </span><br />
+                                            </span><br>
                                         </p>
                                         <p>
-                                            Meet-an-expert (2022).
+                                            <span style="font-size:18px">
+                                                <b>Meet-an-expert (2022)</b>
+                                            </span><br>
                                             <span style="font-size:16px">
                                                 Teaching basic astronomy to 8-10 years old kids including preparation of hands-on activities.
-                                            </span><br />
+                                            </span><br>
                                         </p>
                                     </div>
                                 </div><!--// .yui-gf -->
@@ -199,26 +207,31 @@
                                     <div class="yui-u first">
                                         <h7>Selected Articles</h7>
                                     </div>
-                                    <p>&nbsp;</p>
-                                    <span style="font-size:18px">
-                                        <b>Semi-analytic modelling of Pop. III star formation and metallicity evolution - I. Impact on the UV luminosity
-                                            functions at z = 9-16.</b>
-                                    </span><br>
-                                    <span style="font-size:14px">
-                                        Emanuele M. Ventura, Yuxiang Qin, Balu Sreedhar, and J. Stuart B. Wyithe
-                                    </span><br>
-                                    <span style="font-size:14px">
-                                        <a href="https://academic.oup.com/mnras/article/529/1/628/7612996">MNRAS (2024), 529, 628</a> 
-                                    </span><br />
-                                    <span style="font-size:18px">
-                                        <b>The role of Pop III stars and early black holes in the 21-cm global signal from Cosmic Dawn.</b>
-                                    </span><br>
-                                    <span style="font-size:14px">
-                                        Emanuele M. Ventura, Alessandro Trinca, Raffaella Schneider, Luca Graziani, Rosa Valiante, and J. Stuart B. Wyithe
-                                    </span><br>
-                                    <span style="font-size:14px">
-                                        <a href="https://academic.oup.com/mnras/article/520/3/3609/6998577">MNRAS (2023), 520, 3609-3625</a> 
-                                    </span><br />
+                                    <div class="yui-u">
+                                        <p>
+                                            <span style="font-size:18px">
+                                                <b>Semi-analytic modelling of Pop. III star formation and metallicity evolution - I. Impact on the UV luminosity
+                                                functions at z = 9-16.</b>
+                                            </span><br>
+                                            <span style="font-size:14px">
+                                                Emanuele M. Ventura, Yuxiang Qin, Balu Sreedhar, and J. Stuart B. Wyithe
+                                            </span><br>
+                                            <span style="font-size:14px">
+                                                <a href="https://academic.oup.com/mnras/article/529/1/628/7612996">MNRAS (2024), 529, 628</a> 
+                                            </span><br />
+                                        </p>
+                                        <p>
+                                            <span style="font-size:18px">
+                                                <b>The role of Pop III stars and early black holes in the 21-cm global signal from Cosmic Dawn.</b>
+                                            </span><br>
+                                            <span style="font-size:14px">
+                                                Emanuele M. Ventura, Alessandro Trinca, Raffaella Schneider, Luca Graziani, Rosa Valiante, and J. Stuart B. Wyithe
+                                            </span><br>
+                                            <span style="font-size:14px">
+                                                <a href="https://academic.oup.com/mnras/article/520/3/3609/6998577">MNRAS (2023), 520, 3609-3625</a> 
+                                            </span><br />
+                                        </p>
+                                    </div>
                                 </div><!--// .yui-gf -->
                             </div>
                         </div>
