--- a/research.html
+++ b/research.html
@@ -110,7 +110,7 @@
                                             <div class=gridder-thumb>
                                                 <img src="./img/LF_def5.pdf">
                                                 <h3>
-                                                    <span>A model for galaxy-galaxy strong lensing statistics in surveys</span>
+                                                    <span>A model for Pop.III star formation</span>
                                                 </h3>
                                                 <div></div>
                                             </div>
@@ -119,28 +119,29 @@
                                             <div class=gridder-thumb>
                                                 <img src="./img/SignalRun6.png">
                                                 <h3>
-                                                    <span>Magnification bias depends on source size-L relation</span>
+                                                    <span>Impact of Pop. III and early BHs on 21cm signal</span>
                                                 </h3>
                                                 <div></div>
                                             </div>
                                         </li>
                                     <div id=content1 class=gridder-content>
-                                        <h2>A model for galaxy-galaxy strong lensing statistics in surveys</h2>
+                                        <h2>Semi-analytic modelling of Pop. III star formation and metallicity evolution - I. 
+                                            Impact on the UV luminosity functions at z = 9-16 </h2>
                                         <div class=gridder-wrapper>
                                             <!-- <a href=https://ui.adsabs.harvard.edu/abs/2023MNRAS.523L..21F/abstract class=a-im></a> -->
                                             <img src="./img/LF_def5.pdf">
-                                            <p>Photometric wide-area observations in the next decade will be capable of detecting a large number of
-                                            galaxy-scale strong gravitational lenses, increasing the gravitational lens sample size by orders of magnitude.
-                                            To aid in forecasting and analysis of these surveys, we construct a flexible model based on observed distributions
-                                            for the lens and source properties and test it on the results of past lens searches, including SL2S, SuGOHI
-                                            and searches on the COSMOS HST and DES fields.
-                                            We use this model to estimate the expected yields of some current and planned surveys, including Euclid Wide,
-                                            Vera Rubin LSST, and Roman High Latitude Wide Area.
-                                            The model proposed includes a set of free parameters to constrain on the identifiability of a lens in an image,
-                                            allowing construction of prior probability distributions for different lens detection methods.
-                                            The code used in this work is made publicly available. </p>
-                                            <a href=https://arxiv.org/pdf/2404.03143.pdf class=button>Read the paper</a>
-                                            <a href=https://github.com/Ferr013/GALESS class=button>Check the code</a>
+                                            <p>We implemented Population III (Pop. III) star formation in mini-haloes within the MERAXES semi-analytic galaxy formation and reionization model, 
+                                                run on top of a N-body simulation with L = 10 h-1 cMpc with 20483 particles resolving all dark matter haloes down to the mini-haloes (~10^5 M⊙).
+                                                Our modelling includes the chemical evolution of the IGM, with metals released through supernova-driven bubbles that expand according to the 
+                                                Sedov-Taylor model. We found that SN-driven metal bubbles are generally small, with radii typically of 150 ckpc at z = 6. 
+                                                Hence, the majority of the first galaxies are likely enriched by their own star formation. However, as reionization progresses, 
+                                                the feedback effects from the UV background become more pronounced, leading to a halt in star formation in low-mass galaxies, after which 
+                                                external chemical enrichment becomes more relevant. We explore the sensitivity of the star formation rate density and stellar mass functions 
+                                                to the unknown values of free parameters. We also discuss the observability of Pop. III dominated systems with JWST, 
+                                                finding that the inclusion of Pop. III galaxies can have a significant effect on the total UV luminosity function at z = 12-16. 
+                                                Our results support the idea that the excess of bright galaxies detected with JWST might be explained by the presence of bright top-heavy 
+                                                Pop. III dominated galaxies without requiring an increased star formation efficiency. </p>
+                                            <a href=https://ui.adsabs.harvard.edu/abs/2024MNRAS.529..628V/abstract class=button>Read the paper</a>
                                         </div>
                                     </div>
                                     <div id=content2 class=gridder-content>
