--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
     gtag('config', 'G-R422DSCLH8');
     </script>
 
+    <!--<script src=“https://kit.fontawesome.com/43509592f7.js” crossorigin=“anonymous”></script>-->
+    <script src="https://kit.fontawesome.com/d99cd9d205.js" crossorigin="anonymous"></script>
+
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -27,7 +30,7 @@
     <!-- Custom Fonts -->
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css" type="text/css">
+   <!--  <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css" type="text/css"> -->
 
     <!-- Plugin CSS -->
     <link rel="stylesheet" href="css/animate.min.css" type="text/css">
