--- a/research.html
+++ b/research.html
@@ -105,66 +105,60 @@
                                      <div class="yui-u first">
                                          <h7><i>Research Highlights</i></h7>
                                      </div>
-                                     <ul class=gridder>
-                                        <li class=gridder-list data-griddercontent=#content1>
-                                            <div class=gridder-thumb>
-                                                <img src="./img/LF_def5.pdf">
-                                                <h3>
-                                                    <span>A model for Pop.III star formation</span>
-                                                </h3>
-                                                <div></div>
-                                            </div>
-                                        </li>
-                                        <li class=gridder-list data-griddercontent=#content2>
-                                            <div class=gridder-thumb>
-                                                <img src="./img/SignalRun6.png">
-                                                <h3>
-                                                    <span>Impact of Pop. III and early BHs on 21cm signal</span>
-                                                </h3>
-                                                <div></div>
-                                            </div>
-                                        </li>
-                                    <div id=content1 class=gridder-content>
-                                        <h2>Semi-analytic modelling of Pop. III star formation and metallicity evolution - I. 
-                                            Impact on the UV luminosity functions at z = 9-16 </h2>
-                                        <div class=gridder-wrapper>
-                                            <!-- <a href=https://ui.adsabs.harvard.edu/abs/2023MNRAS.523L..21F/abstract class=a-im></a> -->
-                                            <img src="./img/LF_def5.pdf">
-                                            <p>We implemented Population III (Pop. III) star formation in mini-haloes within the MERAXES semi-analytic galaxy formation and reionization model, 
-                                                run on top of a N-body simulation with L = 10 h-1 cMpc with 20483 particles resolving all dark matter haloes down to the mini-haloes (~10^5 M⊙).
-                                                Our modelling includes the chemical evolution of the IGM, with metals released through supernova-driven bubbles that expand according to the 
-                                                Sedov-Taylor model. We found that SN-driven metal bubbles are generally small, with radii typically of 150 ckpc at z = 6. 
-                                                Hence, the majority of the first galaxies are likely enriched by their own star formation. However, as reionization progresses, 
-                                                the feedback effects from the UV background become more pronounced, leading to a halt in star formation in low-mass galaxies, after which 
-                                                external chemical enrichment becomes more relevant. We explore the sensitivity of the star formation rate density and stellar mass functions 
-                                                to the unknown values of free parameters. We also discuss the observability of Pop. III dominated systems with JWST, 
-                                                finding that the inclusion of Pop. III galaxies can have a significant effect on the total UV luminosity function at z = 12-16. 
-                                                Our results support the idea that the excess of bright galaxies detected with JWST might be explained by the presence of bright top-heavy 
-                                                Pop. III dominated galaxies without requiring an increased star formation efficiency. </p>
-                                            <a href=https://ui.adsabs.harvard.edu/abs/2024MNRAS.529..628V/abstract class=button>Read the paper</a>
-                                        </div>
-                                    </div>
-                                    <div id=content2 class=gridder-content>
-                                        <h2>The role of Pop III stars and early black holes in the 21-cm signal from Cosmic Dawn </h2>
-                                        <div class=gridder-wrapper>
-                                            <img src="./img/SignalRun6.png">
-                                            <p>Modeling the 21-cm global signal from the Cosmic Dawn is challenging due to the many poorly constrained physical processes that come into play. 
-                                                We address this problem using the semi-analytical code 'Cosmic Archaeology Tool' (CAT). 
-                                                CAT follows the evolution of dark matter haloes tracking their merger history and provides an ab initio description of their baryonic evolution, 
-                                                starting from the formation of the first (Pop III) stars and black holes (BHs) in mini-haloes at z > 20. The model is anchored to observations 
-                                                of galaxies and AGN at z < 6 and predicts a reionization history consistent with constraints. In this work, we compute the evolution of the 
-                                                mean global 21-cm signal between 4 ≤ z ≤ 40 based on the rate of formation and emission properties of stars and accreting BHs. We obtain an absorption 
-                                                profile with a maximum depth δTb = -95 mK at z ~ 26.5 (54 MHz). This feature is quickly suppressed turning into an emission signal at z = 20 
-                                                due to the contribution of accreting BHs that efficiently heat the intergalactic medium (IGM) at z < 27. The high-z absorption feature is caused 
-                                                by the early coupling between the spin and kinetic temperature of the IGM induced by Pop III star formation episodes in mini-haloes. Once we account f
-                                                or an additional radio background from early BHs, we are able to reproduce the timing and the depth of the EDGES signal only if we consider 
-                                                a smaller X-ray background from accreting BHs, but not the shape. </p>
-                                            <a href=https://ui.adsabs.harvard.edu/abs/2023MNRAS.520.3609V/abstract class=button>Read the paper</a>
-                                        </div>
-                                    </div>
-                                </div><!--// .yui-gf -->
+                                     <div class="yui-gf">
+                                        <p>&nbsp;</p>
+                                           <p> My main research interests are Population III (Pop. III) stars, Epoch of Reionization, 21cm physics, Cosmological Simulations and Galaxy formation.
+                                           <p> But what are <b>Pop. III stars?</b> According to the current theories, Big Bang was able to synthetise only Hydrogen, Helium and few traces of Lithium. 
+                                               All the other elements were produced inside stars. This means that the very first stars that formed in the Universe must have had a "pristine" chemical composition:
+                                               only H and He. We call these stars: Pop. III stars. While these objects are extremely fascinating, those have never been observed so far leaving a lot of uncertainties
+                                               on the properties of these very first stars. The current consensus is that Pop. III stars were probably more massive and brighter than the stars we observe in the more 
+                                               recent Universe. Understanding Pop. III stars is crucial to understand the evolution of our Universe, for this reason I have developed my own semi-analytical code
+                                               to investigate the parameters that regulate the formation of the first stars. Click <a href="#content1">here</a> to learn more 
+                                               about how implemented Pop. III star formation in Meraxes (Ventura et al. 2024).
+                                            <p>Given their large masses, Pop. III stars emitted a lot of photons impacting on the thermal and ionized state of the Universe. In particular,
+                                               they might have emitted a lot of X-rays, heating up the gas between the galaxies (the intergalactic medium or IGM). Since most of the gas is Hydrogen,
+                                               a very useful observable to study the IGM is the <b>21cm signal</b>. Click <a href="#content2">here</a> to learn
+                                               more about how Pop. III stars and the first black holes can impact the 21cm global signal (Ventura et al. 2023).
+                                    </div><!--// .yui-gf -->
+                                </div>
                             </div>
                         </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="no-padding bg-dark" id="portfolio">
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-lg-6 col-sm-6">
+                        <a href="https://ui.adsabs.harvard.edu/abs/2024MNRAS.529..628V/abstract" class="portfolio-box" id="content1">
+                            <img src="./img/MetalMaps.png" class="img-responsive" alt="" style="width:548px;height:350px;">
+                            <div class="portfolio-box-caption">
+                                <div class="portfolio-box-caption-content">
+                                    <div class="project-category text-faded">
+                                        Ventura et al. (2024)
+                                    </div>
+                                    <div class="project-name">
+                                        A model for Pop.III star formation
+                                    </div>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="col-lg-6 col-sm-6">
+                        <a href="https://ui.adsabs.harvard.edu/abs/2023MNRAS.520.3609V/abstract" class="portfolio-box" id="content2">
+                            <img src="img/SignalRun6.png" class="img-responsive" alt="" style="width:548px;height:350px;">
+                            <div class="portfolio-box-caption">
+                                <div class="portfolio-box-caption-content">
+                                    <div class="project-category text-faded">
+                                        Ventura et al. (2023)
+                                    </div>
+                                    <div class="project-name">
+                                        Impact of Pop. III and early BHs on 21cm signal
+                                    </div>
+                                </div>
+                            </div>
+                        </a>
                     </div>
                 </div>
             </div>
