Minor updates on meraxes and Contact

--- a/meraxes.html
+++ b/meraxes.html
@@ -85,9 +85,12 @@
             <cvheader>
                 <h2>Meraxes</h2>
                 <hr class="star-primary">
-                  <div class="yui-u">
-                       <a id="pdf" href="https://github.com/meraxes-devs/meraxes" class="btn btn-primary btn-xl page-scroll"  style="text-decoration: none">Here for the code</a>
-                 </div>
+                  <div class="yui-gc">
+                    <a href="https://github.com/meraxes-devs/meraxes" class="btn btn-primary btn-xl page-scroll" style="text-decoration: none">Here for the code
+                    </a> 
+                    <a href="https://ui.adsabs.harvard.edu/user/libraries/P7biM3cYRG6TR-aqVAsCxQ" class="btn btn-primary btn-xl page-scroll" style="text-decoration: none">
+                      Publications with Meraxes</a>
+                  </div>
                 </hr>
             </cvheader>
         </div>
@@ -108,6 +111,7 @@
                                         gas accretion and cooling, star formation, supernova feedback (gas ejection and metal enrichment) and mergers. The reionization process is followed self-consistently with galaxy formation and evolution, 
                                         computing the time and spatial evolution of the ionized bubbles within the intergalactic medium (IGM), and its feedback on the gas content in galaxies. Together with reionization, 
                                         also the thermal state and the metallicity evolution of the IGM is followed.</p>
+                                    <p> Meraxes has been used in more than 20 <a href="https://ui.adsabs.harvard.edu/user/libraries/P7biM3cYRG6TR-aqVAsCxQ" target="_blank">refereed papers </a>.
                                     <p> The source code for the latest version including the instructions for compilation and execution are available <a href="https://github.com/meraxes-devs/meraxes" target="_blank"> here </a>.</p>
                                 </div>
                             </div>
