--- a/contact.html
+++ b/contact.html
@@ -121,6 +121,9 @@
                 </div>
             </div>
         </div>
+        </div>
+        </div>
+        </div>
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2 text-center">
                 <ul class="list-inline">
