Adding images and update cv

--- a/contact.html
+++ b/contact.html
@@ -91,6 +91,15 @@
 	       <div id="inner">
                <div id="bd">
                    <div id="yui-main">
+                    <div class="profile-image">
+                        <img align="right" src="img/profile.jpg" style="width:365px;height:420px;margin-right:10px">
+                     </div>
+                     <div class="profile-image">
+                        <img align="right" src="img/Provenza.jpg" style="width:286px;height:420px;margin-right:5px">
+                     </div>
+                     <div class="profile-image">
+                        <img align="right" src="img/Provenza3.jpg" style="width:560px;height:420px;margin-right:5px">
+                     </div>
                         <div class="yui-b">
                             <div class="yui-b">
                                 <div class="yui-gf">
