--- a/cv.html
+++ b/cv.html
@@ -157,6 +157,14 @@
                                     <div class="yui-u">
                                         <p>
                                             <span style="font-size:18px">
+                                                <b>480k CPU hours supercomputing time (2024) </b>
+                                            </span><br>
+                                            <span style="font-size:16px">
+                                                Ozstar, NCI Australia & Swinburne University
+                                            </span><br>
+                                        </p>
+                                        <p>
+                                            <span style="font-size:18px">
                                                 <b>(Merit) ND Goldsworthy Scholarship (2022)</b>
                                             </span><br>
                                             <span style="font-size:16px">
