Update CV and research fr new paper

--- a/cv.html
+++ b/cv.html
@@ -86,7 +86,7 @@
                 <h2>Curriculum vitae</h2>
                 <hr class="star-primary">
                   <div class="yui-u">
-                       <a id="pdf" href="./pdf/Long_CV_Ventura_v2.pdf" class="btn btn-primary btn-xl page-scroll"  style="text-decoration: none">Here for the academic CV</a>
+                       <a id="pdf" href="./pdf/Long_CV_Ventura.pdf" class="btn btn-primary btn-xl page-scroll"  style="text-decoration: none">Here for the academic CV</a>
                  </div>
                 </hr>
             </cvheader>
