--- a/research.html
+++ b/research.html
@@ -116,9 +116,13 @@
                                                to investigate the parameters that regulate the formation of the first stars. Click <a href="#content1">here</a> to learn more 
                                                about how implemented Pop. III star formation in Meraxes (Ventura et al. 2024).
                                             <p>Given their large masses, Pop. III stars emitted a lot of photons impacting on the thermal and ionized state of the Universe. In particular,
-                                               they might have emitted a lot of X-rays, heating up the gas between the galaxies (the intergalactic medium or IGM). Since most of the gas is Hydrogen,
+                                               their remnants might have emitted a lot of X-rays, heating up the gas between the galaxies (the intergalactic medium or IGM). Since most of the gas is neutral Hydrogen,
                                                a very useful observable to study the IGM is the <b>21cm signal</b>. Click <a href="#content2">here</a> to learn
-                                               more about how Pop. III stars and the first black holes can impact the 21cm global signal (Ventura et al. 2023).
+                                               more about how Pop. III stars and the first black holes can impact the 21cm global signal (Ventura et al. 2023). 
+                                            <p>This strong heating occuring at high redshift (z > 15) leaves an imprint also on the power spectrum during the Epoch of Reionization (z = 6-10), prime target of current
+                                               and upcoming radio facilities like HERA and SKA. Click <a href="#content3">here</a> to learn more about the differences in the 21cm power spectrum at z = 7-10
+                                               when Pop. III stars significantly heat up the IGM at z > 15 (Ventura et al. subm.). We also provide estimates on the power spectrum observability with SKA,
+                                               demonstrating that with a SKA observation of 1000 hours we can actually disentangle different Pop. III star formation models.
                                     </div><!--// .yui-gf -->
                                 </div>
                             </div>
@@ -130,7 +134,22 @@
         <div class="no-padding bg-dark" id="portfolio">
             <div class="container-fluid">
                 <div class="row">
-                    <div class="col-lg-6 col-sm-6">
+                    <div class="col-lg-4 col-sm-6">
+                        <a href="https://ui.adsabs.harvard.edu/abs/2025arXiv250208971V/abstract" class="portfolio-box" id="content3">
+                            <img src="./img/21cmSense_SKA1000hrs_v5.png" class="img-responsive" alt="" style="width:548px;height:350px;">
+                            <div class="portfolio-box-caption">
+                                <div class="portfolio-box-caption-content">
+                                    <div class="project-category text-faded">
+                                        Ventura et al. subm
+                                    </div>
+                                    <div class="project-name">
+                                        Pop.III stars and 21cm power spectrum with SKA
+                                    </div>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="col-lg-4 col-sm-6">
                         <a href="https://ui.adsabs.harvard.edu/abs/2024MNRAS.529..628V/abstract" class="portfolio-box" id="content1">
                             <img src="./img/MetalMaps.png" class="img-responsive" alt="" style="width:548px;height:350px;">
                             <div class="portfolio-box-caption">
@@ -145,7 +164,7 @@
                             </div>
                         </a>
                     </div>
-                    <div class="col-lg-6 col-sm-6">
+                    <div class="col-lg-4 col-sm-6">
                         <a href="https://ui.adsabs.harvard.edu/abs/2023MNRAS.520.3609V/abstract" class="portfolio-box" id="content2">
                             <img src="img/SignalRun6.png" class="img-responsive" alt="" style="width:548px;height:350px;">
                             <div class="portfolio-box-caption">
