--- a/research.html
+++ b/research.html
@@ -140,7 +140,7 @@
                             <div class="portfolio-box-caption">
                                 <div class="portfolio-box-caption-content">
                                     <div class="project-category text-faded">
-                                        Ventura et al. subm
+                                        Ventura et al. (2025)
                                     </div>
                                     <div class="project-name">
                                         Pop.III stars and 21cm power spectrum with SKA
